[package]
name = "yuzuping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
# tokio-icmp-echo = "0.4.1"
